updated abstract box and artifacts

--- a/ide/test/pom.xml
+++ b/ide/test/pom.xml
@@ -81,7 +81,7 @@
         </dependency>
         <dependency>
             <groupId>io.intino.alexandria</groupId>
-            <artifactId>ui</artifactId>
+            <artifactId>ui-framework</artifactId>
             <version>LATEST</version>
             <scope>test</scope>
         </dependency>
@@ -93,7 +93,13 @@
         </dependency>
         <dependency>
             <groupId>io.intino.alexandria</groupId>
-            <artifactId>scheduler</artifactId>
+            <artifactId>core-framework</artifactId>
+            <version>LATEST</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.intino.alexandria</groupId>
+            <artifactId>scheduler-framework</artifactId>
             <version>LATEST</version>
             <scope>test</scope>
         </dependency>
@@ -111,7 +117,7 @@
         </dependency>
         <dependency>
             <groupId>io.intino.alexandria</groupId>
-            <artifactId>slack</artifactId>
+            <artifactId>slack-framework</artifactId>
             <version>LATEST</version>
             <scope>test</scope>
         </dependency>
