--- a/ide/builder/res/manifest.json
+++ b/ide/builder/res/manifest.json
@@ -35,12 +35,12 @@
     }
   ],
   "dependencies": {
-    "io.intino.konos:alexandria-rest": "2.3.2",
-    "io.intino.konos:alexandria-jms": "1.0.16",
-    "io.intino.konos:alexandria-jmx": "1.0.4",
-    "io.intino.konos:alexandria-scheduler": "1.0.6",
-    "io.intino.konos:alexandria-slack": "1.0.14",
-    "io.intino.konos:alexandria-ui": "1.2.2",
-    "io.intino.konos:alexandria-ness-accessor": "2.4.9"
+    "io.intino.alexandria:scheduler-framework": "1.0.0",
+    "io.intino.alexandria:slack-framework": "1.0.0",
+    "io.intino.alexandria:ui-framework": "1.0.0",
+    "io.intino.alexandria:rest": "1.0.0",
+    "io.intino.alexandria:jms": "1.0.0",
+    "io.intino.alexandria:jmx": "1.0.0",
+    "io.intino.alexandria:ness-accessor": "1.0.0"
   }
 }
