updated builder and nessaccessor

--- a/ide/builder/res/log4j_model.properties
+++ b/ide/builder/res/log4j_model.properties
@@ -9,6 +9,7 @@ log4j.logger.com.ning=FATAL, stdout
 log4j.logger.com.ullink.slack=FATAL, stdout
 log4j.logger.org.hibernate=FATAL, stdout
 log4j.logger.org.apache.pdfbox=ERROR, stdout
+log4j.logger.eu.medsea=ERROR, stdout
 
 # Direct log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
