--- a/ide/builder/res/log4j_model.properties
+++ b/ide/builder/res/log4j_model.properties
@@ -15,4 +15,4 @@ log4j.logger.eu.medsea=ERROR, stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=[Log]%nts: %d{yyyy-MM-dd'T'HH:mm:ssZ}%nlevel: %-5p%nsourceClass: %C%nsourceMethod: %M:%L%nmessage: %n\t%m%n
+log4j.appender.stdout.layout.ConversionPattern=[%-5p]%nts: %d{yyyy-MM-dd'T'HH:mm:ssZ}%nsource: %M:%L%nmessage: %n\t%m%n
