--- a/alexandria/logger/res/log4j.properties
+++ b/alexandria/logger/res/log4j.properties
@@ -13,4 +13,5 @@ log4j.logger.org.apache.pdfbox=ERROR, stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=[%-5p]%nts: %d{yyyy-MM-dd'T'HH:mm:ssZ}%nsource: %M:%L%nmessage: %n\t%m%n
+#log4j.appender.stdout.layout.ConversionPattern=[log]%nts: %d{yyyy-MM-dd'T'HH:mm:ssZ}%nlevel: %-5p%nsourceClass: %C%nsourceMethod: %M:%L%nmessage: %m%n
+log4j.appender.stdout.layout.ConversionPattern=[%-5p]%nts: %d{yyyy-MM-dd'T'HH:mm:ssZ}%nsource: %C:%M:%L%nmessage: %n\t%m%n
