--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ alexandria/activity-elements-activity/gulpFile.js
 alexandria/activity-elements-activity/package.json
 gulpFile.js
 alexandria/ui-elements-old
+alexandria/ui-elements-new
