alexandria-ui: adding example app for building components

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ alexandria/activity-elements-activity/package.json
 gulpFile.js
 ide/builder/src-old
 alexandria/ui-elements-old
+alexandria/ui-elements/node_modules
