--- a/alexandria/ui/res/log4j.properties
+++ b/alexandria/ui/res/log4j.properties
@@ -1,24 +1,18 @@
-#
-# Copyright 2010-2013 The Kuali Foundation
-#
-# Licensed under the Educational Community License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-# http://www.opensource.org/licenses/ecl2.php
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-#
-
-# Default Logging Configuration
 log4j.rootLogger=INFO, stdout
+log4j.logger.org.eclipse=WARN, stdout
+log4j.logger.org.apache.activemq=FATAL, stdout
+log4j.logger.org.quartz=WARN, stdout
+log4j.logger.org.apache=WARN, stdout
+log4j.logger.spark=WARN, stdout
+log4j.logger.com.jcabi=FATAL, stdout
+log4j.logger.com.ning=FATAL, stdout
+log4j.logger.com.ullink.slack=FATAL, stdout
+log4j.logger.org.hibernate=FATAL, stdout
+log4j.logger.org.apache.pdfbox=ERROR, stdout
+log4j.logger.eu.medsea=ERROR, stdout
+
+# Direct log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=[%p] %m\n
-log4j.logger.com.amazonaws=WARN
-#log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %-5p %x - %m\n
-#log4j.appender.stdout.layout.ConversionPattern=%m\n
+log4j.appender.stdout.layout.ConversionPattern=[%-5p]%nts: %d{yyyy-MM-dd'T'HH:mm:ssZ}%nsource: %C:%M:%L%nmessage: %n\t%m%n
