--- a/ide/builder/res/log4j_model.properties
+++ b/ide/builder/res/log4j_model.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=DEBUG, stdout
+log4j.rootLogger=WARN, stdout
 log4j.logger.org.eclipse=FATAL, stdout
 log4j.logger.org.apache.activemq=FATAL, stdout
 log4j.logger.org.quartz=WARN, stdout
