alexandria-ui: added node_modules ignore

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ gulpFile.js
 alexandria/ui-elements-old
 alexandria/ui-elements-new
 alexandria/ui-elements/node_modules
+framework/ui-elements/node_modules
