--- a/toolbox/test/pom.xml
+++ b/toolbox/test/pom.xml
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>io.intino.konos</groupId>
             <artifactId>builder</artifactId>
-            <version>5.1.0</version>
+            <version>6.0.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -47,7 +47,7 @@
             <groupId>io.intino.tara</groupId>
             <artifactId>magritte</artifactId>
             <scope>test</scope>
-            <version>2.1.12</version>
+            <version>2.2.0</version>
         </dependency>
         <dependency>
             <groupId>io.intino.itrules</groupId>
@@ -67,7 +67,6 @@
             <scope>test</scope>
             <version>1.0.0</version>
         </dependency>
-
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -128,5 +127,17 @@
             <version>1.0.4</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.5</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.picocontainer</groupId>
+            <artifactId>picocontainer</artifactId>
+            <version>2.15</version>
+        </dependency>
     </dependencies>
+
 </project>
