--- a/toolbox/test/pom.xml
+++ b/toolbox/test/pom.xml
@@ -20,7 +20,28 @@
         <outputDirectory>../../out/production/builder-test</outputDirectory>
         <testOutputDirectory>../../out/test/builder-test</testOutputDirectory>
         <directory>../../out/build/builder-test</directory>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.7</version>
+                <executions>
+                    <execution>
+                        <phase>initialize</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <target>
+                                <delete dir="${project.basedir}/test-gen" includeemptydirs="true"/>
+                            </target>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
     </build>
+
 
     <repositories>
         <repository>
@@ -34,7 +55,7 @@
         <dependency>
             <groupId>io.intino.konos</groupId>
             <artifactId>builder</artifactId>
-            <version>5.1.0</version>
+            <version>5.2.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -82,6 +103,12 @@
         </dependency>
         <dependency>
             <groupId>io.intino.alexandria</groupId>
+            <artifactId>inl</artifactId>
+            <version>LATEST</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.intino.alexandria</groupId>
             <artifactId>jmx</artifactId>
             <version>LATEST</version>
             <scope>test</scope>
@@ -89,7 +116,19 @@
         <dependency>
             <groupId>io.intino.alexandria</groupId>
             <artifactId>core-framework</artifactId>
-            <version>1.0.1</version>
+            <version>LATEST</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.intino.ness</groupId>
+            <artifactId>ingestion-lib</artifactId>
+            <version>LATEST</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.intino.alexandria</groupId>
+            <artifactId>tabb</artifactId>
+            <version>LATEST</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -101,12 +140,6 @@
         <dependency>
             <groupId>io.intino.alexandria</groupId>
             <artifactId>jms</artifactId>
-            <version>LATEST</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.intino.alexandria</groupId>
-            <artifactId>ness-accessor</artifactId>
             <version>LATEST</version>
             <scope>test</scope>
         </dependency>
