--- a/toolbox/dsl/pom.xml
+++ b/toolbox/dsl/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.intino.konos</groupId>
     <artifactId>model</artifactId>
-    <name>Model</name>
+    <name>Dsl</name>
     <version>1.0.0</version>
 
     <properties>
