--- a/toolbox/builder/res/manifest.json
+++ b/toolbox/builder/res/manifest.json
@@ -33,6 +33,6 @@
     "io.intino.alexandria:rest": "1.0.4",
     "io.intino.alexandria:jms": "1.0.1",
     "io.intino.alexandria:jmx": "1.0.1",
-    "io.intino.ness:ingestion-lib": "1.0.13"
+    "io.intino.ness:ingestion": "1.0.0"
   }
 }
