--- a/.gitignore
+++ b/.gitignore
@@ -16,5 +16,8 @@ alexandria/ui-elements-old
 alexandria/ui-elements/node_modules
 framework/ui-elements/node_modules/core-js-compat/node_modules
 framework/ui-elements/node_modules
+framework/ui-elements/package.json
+framework/ui-elements/webpack.config.js
 framework/ui/res/.cache
 framework/ui/res/.checksum
+.tara
