updated ness artifacts. updated dataHub definition and library. updated code generation. builder 5.2.0

--- a/toolbox/builder/res/manifest.json
+++ b/toolbox/builder/res/manifest.json
@@ -33,6 +33,6 @@
     "io.intino.alexandria:rest": "1.0.4",
     "io.intino.alexandria:jms": "1.0.1",
     "io.intino.alexandria:jmx": "1.0.1",
-    "io.intino.alexandria.data-hub": "1.0.0"
+    "io.intino.alexandria:data-hub": "1.0.0"
   }
 }
