--- a/framework/ui/res/log4j.properties
+++ b/framework/ui/res/log4j.properties
@@ -1,5 +1,5 @@
-log4j.rootLogger=INFO, stdout
-log4j.logger.org.eclipse=WARN, stdout
+log4j.rootLogger=WARN, stdout
+log4j.logger.org.eclipse=FATAL, stdout
 log4j.logger.org.apache.activemq=FATAL, stdout
 log4j.logger.org.quartz=WARN, stdout
 log4j.logger.org.apache=WARN, stdout
@@ -15,4 +15,4 @@ log4j.logger.eu.medsea=ERROR, stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=[%-5p]%nts: %d{yyyy-MM-dd'T'HH:mm:ssZ}%nsource: %C:%M:%L%nmessage: %n\t%m%n
+log4j.appender.stdout.layout.ConversionPattern=[%-5p]%nts: %d{yyyy-MM-dd'T'HH:mm:ssZ}%nsource: %M:%L%nmessage: %n\t%m%n
