--- a/toolbox/test/pom.xml
+++ b/toolbox/test/pom.xml
@@ -95,6 +95,12 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>picocontainer</groupId>
+            <artifactId>picocontainer</artifactId>
+            <version>1.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>io.intino.alexandria</groupId>
             <artifactId>ui-framework</artifactId>
             <version>LATEST</version>
