updated datalake and messageHub integration. updated language and tests

--- a/toolbox/builder/res/manifest.json
+++ b/toolbox/builder/res/manifest.json
@@ -33,6 +33,9 @@
     "io.intino.alexandria:rest": "2.0.0",
     "io.intino.alexandria:jms": "1.0.1",
     "io.intino.alexandria:jmx": "1.0.1",
-    "io.intino.alexandria:data-hub": "1.0.0"
+    "io.intino.alexandria:datalake": "1.0.0",
+    "io.intino.alexandria:message-hub": "1.0.0",
+    "io.intino.alexandria:message-hub-jms": "1.0.0",
+    "com.hierynomus:sshj": "0.27.0"
   }
 }
