updated bpm and bpm builder

--- a/toolbox/builder/pom.xml
+++ b/toolbox/builder/pom.xml
@@ -114,6 +114,11 @@
             <version>1.0.0</version>
         </dependency>
         <dependency>
+            <groupId>io.intino</groupId>
+            <artifactId>bpmn-parser</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.maven.shared</groupId>
             <artifactId>maven-invoker</artifactId>
             <scope>provided</scope>
