updated bpm rendering

--- a/toolbox/builder/res/manifest.json
+++ b/toolbox/builder/res/manifest.json
@@ -31,6 +31,7 @@
     "io.intino.alexandria:slack-framework": "1.0.1",
     "io.intino.alexandria:ui-framework": "2.0.0",
     "io.intino.alexandria:rest": "2.0.0",
+    "io.intino.alexandria:bpm": "1.0.0",
     "io.intino.alexandria:jms": "1.0.1",
     "io.intino.alexandria:jmx": "1.0.1",
     "io.intino.alexandria:datalake": "1.0.0",
