alexandria-drivers: delegated program name to applications alexandria-ui: added selector examples, added tabs builder: fixed bug with alexandria dependencies manifest

--- a/toolbox/builder/res/manifest.json
+++ b/toolbox/builder/res/manifest.json
@@ -27,7 +27,7 @@
     }
   ],
   "dependencies": {
-    "io.intino.alexandria:core": "2.0.1",
+    "io.intino.alexandria:core-framework": "2.0.1",
     "io.intino.alexandria:scheduler-framework": "1.0.0",
     "io.intino.alexandria:slack-framework": "1.0.1",
     "io.intino.alexandria:ui-framework": "2.0.0",
