--- a/toolbox/builder/res/manifest.json
+++ b/toolbox/builder/res/manifest.json
@@ -37,6 +37,8 @@
     "io.intino.alexandria:datalake": "1.0.0",
     "io.intino.alexandria:message": "1.0.0",
     "io.intino.alexandria:message-hub-jms": "1.0.0",
-    "com.hierynomus:sshj": "0.27.0"
+    "com.hierynomus:sshj": "0.27.0",
+    "io.intino.alexandria:driver-r": "1.0.0",
+    "io.intino.alexandria:driver-shiny": "1.0.0"
   }
 }
