updated bpm rendering added taskInbox

--- a/toolbox/test/pom.xml
+++ b/toolbox/test/pom.xml
@@ -240,7 +240,7 @@
         </dependency>
         <dependency>
             <groupId>io.intino.alexandria</groupId>
-            <artifactId>bpm</artifactId>
+            <artifactId>bpm-framework</artifactId>
             <version>LATEST</version>
         </dependency>
         <dependency>
