--- a/toolbox/builder/res/manifest.json
+++ b/toolbox/builder/res/manifest.json
@@ -45,6 +45,7 @@
     "io.intino.alexandria:jmx": "1.0.1",
     "io.intino.alexandria:datalake": "1.0.0",
     "io.intino.alexandria:message": "1.0.0",
+    "io.intino.alexandria:jms": "1.1.0",
     "io.intino.alexandria:message-hub-jms": "1.0.0",
     "com.hierynomus:sshj": "0.27.0",
     "io.intino.alexandria:driver-r": "1.0.0",
