--- a/toolbox/konos-dsl/pom.xml
+++ b/toolbox/konos-dsl/pom.xml
@@ -71,6 +71,11 @@
             <scope>provided</scope>
             <version>3.0.0</version>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>io.intino.tara</groupId>-->
+<!--            <artifactId>builder</artifactId>-->
+<!--            <version>3.0.0</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
