--- a/toolbox/konos-dsl/pom.xml
+++ b/toolbox/konos-dsl/pom.xml
@@ -8,15 +8,15 @@
     <version>1.0.0</version>
 
     <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <tara.level>Product</tara.level>
-        <tara.dsl>Proteo</tara.dsl>
-        <tara.dsl.version>1.0.0</tara.dsl.version>
-        <tara.out.dsl>Konos</tara.out.dsl>
-        <tara.working.package>io.intino.konos.model</tara.working.package>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<tara.level>Product</tara.level>
+		<tara.language>Proteo</tara.language>
+		<tara.language.version>1.0.0</tara.language.version>
+		<tara.out.language>Konos</tara.out.language>
+		<tara.generation.package>io.intino.konos.model</tara.generation.package>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 
     <build>
         <outputDirectory>../../out/production/model</outputDirectory>
@@ -65,12 +65,12 @@
     </repositories>
 
     <dependencies>
-        <dependency>
-            <groupId>io.intino.tara</groupId>
-            <artifactId>magritte</artifactId>
-            <scope>provided</scope>
-            <version>3.0.0</version>
-        </dependency>
+		<dependency>
+			<groupId>io.intino.magritte</groupId>
+			<artifactId>framework</artifactId>
+			<scope>provided</scope>
+			<version>3.0.0</version>
+		</dependency>
 <!--        <dependency>-->
 <!--            <groupId>io.intino.tara</groupId>-->
 <!--            <artifactId>builder</artifactId>-->
