--- a/toolbox/konos-dsl/pom.xml
+++ b/toolbox/konos-dsl/pom.xml
@@ -22,6 +22,7 @@
         <outputDirectory>../../out/production/model</outputDirectory>
         <testOutputDirectory>../../out/test/model</testOutputDirectory>
         <directory>../../out/build/model</directory>
+		<sourceDirectory>src</sourceDirectory>
         <resources>
             <resource>
                 <directory>res</directory>
@@ -79,7 +80,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>LATEST</version>
+			<version>4.12</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
