--- a/toolbox/builder/res/manifest.json
+++ b/toolbox/builder/res/manifest.json
@@ -36,8 +36,9 @@
     }
   ],
   "dependencies": {
-    "io.intino.alexandria:core-framework": "2.0.3",
-    "io.intino.alexandria:scheduler-framework": "1.0.2",
+    "io.intino.alexandria:core-framework": "2.0.4",
+    "io.intino.alexandria:scheduler-framework": "1.0.3",
+    "io.intino.alexandria:http": "1.0.1",
     "io.intino.alexandria:slack-framework": "2.0.3",
     "io.intino.alexandria:ui-framework": "4.0.1",
     "io.intino.alexandria:rest": "3.0.1",
