--- a/toolbox/builder/pom.xml
+++ b/toolbox/builder/pom.xml
@@ -110,6 +110,11 @@
 			</exclusions>
 		</dependency>
 		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.6</version>
+		</dependency>
+		<dependency>
 			<groupId>io.intino.cottons</groupId>
 			<artifactId>cotton-utils</artifactId>
 			<version>1.0.0</version>
